--- a/index.html
+++ b/index.html
@@ -22,6 +22,82 @@
     background: #fff
   }
 
+  /* hamburger + graphs menu */
+  #ham {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    z-index: 20;
+    padding: 8px 10px;
+    border: 1px solid #e5e7eb;
+    border-radius: 10px;
+    background: #fff;
+    cursor: pointer
+  }
+
+  #gmenu {
+    position: absolute;
+    top: 52px;
+    left: 12px;
+    z-index: 20;
+    width: 320px;
+    max-height: 60vh;
+    overflow: auto;
+    border: 1px solid #e5e7eb;
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0 12px 32px rgba(0, 0, 0, .12);
+    display: none
+  }
+
+  #gmenu .gmhead {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 10px;
+    border-bottom: 1px solid #eef2f7;
+    font-weight: 600
+  }
+
+  #glist .gitem {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 10px;
+    cursor: pointer
+  }
+
+  #glist .gitem:hover {
+    background: #f8fafc
+  }
+
+  #glist .name {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis
+  }
+
+  #glist .ind {
+    width: 10px;
+    height: 10px;
+    border-radius: 9999px;
+    background: #cbd5e1
+  }
+
+  #glist .ind.current {
+    background: #4f46e5
+  }
+
+  #glist .copy {
+    border: 1px solid #d1d5db;
+    border-radius: 8px;
+    background: #fff;
+    padding: 4px 8px;
+    cursor: pointer
+  }
+
+
   .edge {
     fill: none;
     stroke: #64748b;
@@ -72,6 +148,15 @@
 <div id="wrap">
   <svg id="svg"></svg>
   <div id="panel"><iframe id="tools"></iframe></div>
+  <button id="ham" title="Graphs">☰</button>
+  <div id="gmenu">
+    <div class="gmhead">
+      <span>Graphs</span>
+      <button id="newg" title="New graph">➕</button>
+    </div>
+    <div id="glist"></div>
+  </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
@@ -247,4 +332,90 @@
 
   /* boot */
   (async function () {await load(); renderAll(true);})();
+</script>
+
+<script>
+  /* ---- graphs menu ---- */
+  const ham = document.getElementById('ham');
+  const menu = document.getElementById('gmenu');
+  const glist = document.getElementById('glist');
+  const newg = document.getElementById('newg');
+
+  function graphUrl(id) {
+    const url = new URL(location.href);
+    url.search = '';
+    url.searchParams.set('graph', id);
+    return url.toString();
+  }
+
+  async function fetchGraphs() {
+    // Fetch newest first; fall back to empty list if none/forbidden
+    const {data: rows = []} = await sb.from('graphs').select('id,name,created_at').order('created_at', {ascending: false});
+    return rows;
+  }
+
+  async function renderGraphs() {
+    const rows = await fetchGraphs();
+    glist.innerHTML = '';
+    rows.forEach(row => {
+      const item = document.createElement('div'); item.className = 'gitem';
+      const ind = document.createElement('span'); ind.className = 'ind' + (row.id === GRAPH_ID ? ' current' : '');
+      const name = document.createElement('div'); name.className = 'name'; name.textContent = row.name || '(untitled)';
+      const copy = document.createElement('button'); copy.className = 'copy'; copy.textContent = '🔗'; copy.title = 'Copy embed URL';
+
+      copy.onclick = async (ev) => {ev.stopPropagation(); await navigator.clipboard.writeText(graphUrl(row.id)); copy.textContent = '✅'; setTimeout(() => copy.textContent = '🔗', 900);};
+      item.onclick = () => {location.href = graphUrl(row.id);};
+
+      item.append(ind, name, copy);
+      glist.appendChild(item);
+    });
+
+    if (rows.length === 0) {
+      const empty = document.createElement('div'); empty.className = 'gitem';
+      empty.textContent = 'No graphs yet — create one ➕';
+      glist.appendChild(empty);
+    }
+  }
+
+  ham.addEventListener('click', async (e) => {
+    e.stopPropagation();
+    if (menu.style.display === 'block') {
+      menu.style.display = 'none';
+    } else {
+      await renderGraphs();
+      menu.style.display = 'block';
+    }
+  });
+
+  newg.addEventListener('click', async (e) => {
+    e.stopPropagation();
+    const name = (prompt('New graph name?') || 'Untitled').trim();
+    if (!name) return;
+    // create graph
+    let ins = await sb.from('graphs').insert({name}).select().single();
+    if (ins.error) {
+      // fallback: if your table has no default UUID, generate one client-side
+      const id = ([1e7] + -1e3 + -4e3 + -8e3 + -1e11).replace(/[018]/g, c => (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16));
+      ins = await sb.from('graphs').insert({id, name}).select().single();
+    }
+    if (ins.error) {alert('Create failed: ' + ins.error.message); return;}
+    // jump to the new graph; your existing load() will create a root node on first render
+    location.href = graphUrl(ins.data.id);
+  });
+
+  // Close menu when clicking anywhere else (keep your existing panel click-off too)
+  document.addEventListener('pointerdown', (e) => {
+    if (menu.style.display === 'block' && !menu.contains(e.target) && e.target !== ham) {
+      menu.style.display = 'none';
+    }
+  }, true);
+
+  // Optional: realtime refresh if someone else creates/renames graphs
+  try {
+    sb.channel('rt-graphs')
+      .on('postgres_changes', {event: '*', schema: 'public', table: 'graphs'}, async () => {
+        if (menu.style.display === 'block') await renderGraphs();
+      })
+      .subscribe();
+  } catch { }
 </script>
